<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transform"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reflow"
            android:icon="@drawable/catalogo"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/historial"
            android:title="@string/menu_historial" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/perfil"
            android:title="@string/menu_profile" />
    </group>
</menu>