<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_transform">

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.example.shoptimize.ui.transform.TransformFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_transform">
        <action
            android:id="@+id/action_nav_transform_to_listDetalle"
            app:destination="@id/nav_lista_detalle" />
    </fragment>

    <fragment
        android:id="@+id/nav_lista_detalle"
        android:name="com.example.shoptimize.ui.detalle.ListaDetalleFragment"
        android:label="Compras"
        tools:layout="@layout/fragment_lista_detalle">
        <argument
            android:name="listaIndex"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_lista_detalle_to_seleccionar_producto"
            app:destination="@id/nav_seleccionar_producto" />
    </fragment>

    <fragment
        android:id="@+id/nav_seleccionar_producto"
        android:name="com.example.shoptimize.ui.detalle.SeleccionarProductoFragment"
        android:label="Agregar Producto"
        tools:layout="@layout/fragment_seleccionar_producto">
        <argument
            android:name="listaIndex"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.example.shoptimize.ui.reflow.ReflowFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.shoptimize.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.shoptimize.ui.history.HistoryFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/history_lists" />
</navigation>